# semaphoreci-cctray

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
src/: cctray.rs  lib.rs  main.rs  pipeline.rs  semaphoreci.rs
tests/: cctray_feed_for_single_project.rs  fixtures.rs  integration_test.rs  start_app.rs
tests/support/: mod.rs
