[package]
name = "semaphoreci-cctray"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
itertools = "0.14.0"
chrono = "0.4.38"
env_logger = "0.11.5"
serde_json = "1.0.140"

[dev-dependencies]
wiremock = "0.6.3"
